# paperio

./: .gitignore  README.md  client.py  main.py  pyproject.toml  server.py
