[project]
name = "paperio"
version = "0.1.0"
description = "Paper.IO like game in the terminal"
readme = "README.md"
requires-python = ">=3.13"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.0",
]

[tool.mypy]
strict = true
files = ["server.py", "client.py"]

[tool.ruff.format]
quote-style = "single"
